==> apache/nuttx/configs/sam3u-ek/src/up_lcd.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/lcd/lcd.h>
#include <nuttx/rgbcolors.h>
#include <arch/irq.h>
#include "up_arch.h"
#include "sam_gpio.h"
#include "chip/sam3u_pmc.h"
#include "chip/sam_smc.h"
#include "sam3u-ek.h"
# define regdbg(format, arg...)  vdbg(format, ##arg)
# define regdbg(x...)
#  define SAM3UEK_XRES         240
#  define SAM3UEK_YRES         320
#  define SAM3UEK_XRES         320
#  define SAM3UEK_YRES         240
#define SAM3UEK_BPP          16
#define SAM3UEK_RGBFMT       FB_FMT_RGB16_565
#define HX843X_LCD_RS        (1 << 1)
#define HX8347_CHIPID        0x47
#define HX8347_R00H          0x00
#define HX8347_R01H          0x01
#define HX8347_R02H          0x02
#define HX8347_R03H          0x03
#define HX8347_R04H          0x04
#define HX8347_R05H          0x05
#define HX8347_R06H          0x06
#define HX8347_R07H          0x07
#define HX8347_R08H          0x08
#define HX8347_R09H          0x09
#define HX8347_R0AH          0x0a
#define HX8347_R0CH          0x0c
#define HX8347_R0DH          0x0d
#define HX8347_R0EH          0x0e
#define HX8347_R0FH          0x0f
#define HX8347_R10H          0x10
#define HX8347_R11H          0x11
#define HX8347_R12H          0x12
#define HX8347_R13H          0x13
#define HX8347_R14H          0x14
#define HX8347_R15H          0x15
#define HX8347_R16H          0x16

static void sam_setcursor(fb_coord_t row, fb_coord_t col)
{
  uint8_t  x1;
  uint8_t  x2;
  uint8_t  y1;
  uint8_t  y2;

  /* Get the upper and lower x and y positions */

  x1  = (uint8_t)col;
  x2  = (uint8_t)((uint16_t)col >> 8);

  y1  = (uint8_t)row;
  y2  = (uint8_t)((uint16_t)row >> 8);

  /* Then set the cursor position */

  sam_putreg(HX8347_R02H, x2);        /* column high */
  sam_putreg(HX8347_R03H, x1);        /* column low */
  sam_putreg(HX8347_R06H, y2);        /* row high */
  sam_putreg(HX8347_R07H, y1);        /* row low */
}

static int sam_putrun(fb_coord_t row, fb_coord_t col, FAR const uint8_t *buffer,
                      size_t npixels)
{
  uint16_t *run = (uint16_t*)buffer;
  unsigned int i;

  /* Buffer must be provided and aligned to a 16-bit address boundary */

  gvdbg("row: %d col: %d npixels: %d\n", row, col, npixels);
  DEBUGASSERT(buffer && ((uintptr_t)buffer & 1) == 0);

#ifdef CONFIG_LCD_PORTRAIT
  /* Set up to write the run. */

  sam_setcursor(row, col);
  sam_wrsetup();

  /* Write the run to GRAM. */

  for (i = 0; i < npixels; i++)
    {
      /* Write the pixel pixel to GRAM */

      sam_wrram(*run++);
    }
#else
  /* Write the run to GRAM.  Because rows and colums are swapped, we need to reset
   * the cursor position for every pixel.  We could do this much faster if we
   * adapted to the strange device aspect ratio.
   */

  col = 319-col;
  for (i = 0; i < npixels; i++)
    {
      /* Set up to write the next pixel. Swapping x and y orientations so that the image
       * comes out with the 320x240 aspect ratio (not the native 240x320).  That is:
       *
       *   row: 0-239 maps to x: 0-239
       *   col: 0-319 maps to y: 319-0
       */

      sam_setcursor(col--, row);
      sam_wrsetup();

      /* Write the pixel pixel to GRAM */

      sam_wrram(*run++);
    }
#endif
  return OK;
}

static int sam_getrun(fb_coord_t row, fb_coord_t col, FAR uint8_t *buffer,
                      size_t npixels)
{
  uint16_t *run = (uint16_t*)buffer;
  unsigned int i;

  /* Buffer must be provided and aligned to a 16-bit address boundary */

  gvdbg("row: %d col: %d npixels: %d\n", row, col, npixels);
  DEBUGASSERT(buffer && ((uintptr_t)buffer & 1) == 0);

#ifdef CONFIG_LCD_PORTRAIT
  /* Set up to read the run */

  sam_setcursor(row, col);

  /* Read the run from GRAM. */

  for (i = 0; i < npixels; i++)
    {
      /* Read the next pixel */

      *run++ = sam_rdram();
    }
#else
  /* Read the run from GRAM  Because rows and colums are swapped, we need to reset
   * the cursor position for every pixel.  We could do this much faster if we
   * adapted to the strange device aspect ratio.
   */

  col = 319 - col;
  for (i = 0; i < npixels; i++)
    {
      /* Read the next pixel.. Swapping x and y orientations so that the image
       * comes out with the 320x240 aspect ratio (not the native 240x320).  That is:
       *
       *   row: 0-239 maps to x: 0-239
       *   col: 0-319 maps to y: 319-0
       */

      sam_setcursor(col--, row);
      *run++ = sam_rdram();
    }
#endif
  return OK;
}

static int sam_getpower(struct lcd_dev_s *dev)
{
  struct sam_dev_s *priv = (struct sam_dev_s *)dev;
  DEBUGASSERT(dev);
  gvdbg("power: %d\n", priv->power);
  return priv->power;
}

static int sam_setpower(struct lcd_dev_s *dev, int power)
{
  struct sam_dev_s *priv = (struct sam_dev_s *)dev;
  unsigned int i;

  gvdbg("power: %d\n", power);
  DEBUGASSERT(power <= CONFIG_LCD_MAXPOWER);

  /* Switch off backlight */

  sam_gpiowrite(GPIO_LCD_BKL, false);

  /* For for at least 500uS to drain the charge pump */

  up_udelay(500);

  /* Set new backlight level by pumping "level" times */

  for (i = 0; i < power; i++)
    {
      sam_gpiowrite(GPIO_LCD_BKL, false);
      sam_gpiowrite(GPIO_LCD_BKL, false);
      sam_gpiowrite(GPIO_LCD_BKL, false);
      sam_gpiowrite(GPIO_LCD_BKL, true);
      sam_gpiowrite(GPIO_LCD_BKL, true);
      sam_gpiowrite(GPIO_LCD_BKL, true);
    }

  /* This delay seems to be required... perhaps because of the big current jump? */

  if (power != LCD_FULL_OFF)
    {
      up_mdelay(100);
    }

  priv->power = power;
  return OK;
}

int up_lcdinitialize(void)
{
#ifdef CONFIG_DEBUG_GRAPHICS
  uint16_t hxregval;
#endif
  uint32_t regval;
  unsigned int i;

  gvdbg("Initializing\n");

  /* Enable LCD EXTCS2 pins */

  sam_configgpio(GPIO_LCD_NCS2);
  sam_configgpio(GPIO_LCD_RS);
  sam_configgpio(GPIO_LCD_NWE);
  sam_configgpio(GPIO_LCD_NRD);

  sam_configgpio(GPIO_LCD_D0);
  sam_configgpio(GPIO_LCD_D1);
  sam_configgpio(GPIO_LCD_D2);
  sam_configgpio(GPIO_LCD_D3);
  sam_configgpio(GPIO_LCD_D4);
  sam_configgpio(GPIO_LCD_D5);
  sam_configgpio(GPIO_LCD_D6);
  sam_configgpio(GPIO_LCD_D7);
  sam_configgpio(GPIO_LCD_D8);
  sam_configgpio(GPIO_LCD_D9);
  sam_configgpio(GPIO_LCD_D10);
  sam_configgpio(GPIO_LCD_D11);
  sam_configgpio(GPIO_LCD_D12);
  sam_configgpio(GPIO_LCD_D13);
  sam_configgpio(GPIO_LCD_D14);
  sam_configgpio(GPIO_LCD_D15);

#ifdef CONFIG_LCD_REGDEBUG
  sam_dumpgpio(GPIO_PORT_PIOB, "PORTB");
  sam_dumpgpio(GPIO_PORT_PIOC, "PORTC");
#endif

  /* Configure LCD Backlight Pin */

  sam_configgpio(GPIO_LCD_D15);

  /* Enable SMC peripheral clock */

  putreg32((1 << SAM_PID_SMC), SAM_PMC_PCER);
  regdbg("PMC PCSR: %08x SMC: %08x\n", getreg32(SAM_PMC_PCSR), (1 << SAM_PID_SMC));

  /* Configure SMC CS2 */

  regval = (4 << SMCCS_SETUP_NWESETUP_SHIFT) | (2 << SMCCS_SETUP_NCSWRSETUP_SHIFT) |
           (4 << SMCCS_SETUP_NRDSETUP_SHIFT) | (2 << SMCCS_SETUP_NCSRDSETUP_SHIFT);
  putreg32(regval, SAM_SMCCS_SETUP(2));

  regval = (5 << SMCCS_PULSE_NWEPULSE_SHIFT) | (18 << SMCCS_PULSE_NCSWRPULSE_SHIFT) |
           (5 << SMCCS_PULSE_NRDPULSE_SHIFT)  | (18 << SMCCS_PULSE_NCSRDPULSE_SHIFT);
  putreg32(regval, SAM_SMCCS_PULSE(2));

  regval = (22 << SMCCS_CYCLE_NWECYCLE_SHIFT) | (22 << SMCCS_CYCLE_NRDCYCLE_SHIFT);
  putreg32(regval, SAM_SMCCS_CYCLE(2));

  regval  = getreg32(SAM_SMCCS_MODE(2));
  regval &= ~(SMCCS_MODE_DBW_MASK | SMCCS_MODE_PMEN);
  regval |= (SMCCS_MODE_READMODE)  | (SMCCS_MODE_WRITEMODE) | (SMCCS_MODE_DBW_16BITS);
  putreg32(regval, SAM_SMCCS_MODE(2));

  regdbg("SMC SETUP[%08x]: %08x PULSE[%08x]: %08x\n",
         SAM_SMCCS_SETUP(2), getreg32(SAM_SMCCS_SETUP(2)),
         SAM_SMCCS_PULSE(2), getreg32(SAM_SMCCS_PULSE(2)));
  regdbg("    CYCLE[%08x]: %08x MODE[%08x]:  %08x\n",
         SAM_SMCCS_CYCLE(2), getreg32(SAM_SMCCS_CYCLE(2)),
         SAM_SMCCS_MODE(2),  getreg32(SAM_SMCCS_MODE(2)));

  /* Check HX8347 Chip ID */

#ifdef CONFIG_DEBUG_GRAPHICS
  hxregval = sam_getreg(HX8347_R67H);
  gvdbg("Chip ID: %04x\n", hxregval);
  if (hxregval != HX8347_CHIPID)
    {
      gdbg("Bad chip ID: %04x Expected: %04x\n", hxregval, HX8347_CHIPID);
      return -ENODEV;
    }
#endif

  /* Initialize LCD controller (HX8347) -- Magic code from Atmel LCD example */

  /* Start internal OSC */

  sam_putreg(HX8347_R19H, 0x49);      /* OSCADJ=10 0000 OSD_EN=1 60Hz */
  sam_putreg(HX8347_R93H, 0x0C);      /* RADJ=1100 */

  /* Power on flow */

  sam_putreg(HX8347_R44H, 0x4D);      /* VCM=100 1101 */
  sam_putreg(HX8347_R45H, 0x11);      /* VDV=1 0001 */
  sam_putreg(HX8347_R20H, 0x40);      /* BT=0100 */
  sam_putreg(HX8347_R1DH, 0x07);      /* VC1=111 */
  sam_putreg(HX8347_R1EH, 0x00);      /* VC3=000 */
  sam_putreg(HX8347_R1FH, 0x04);      /* VRH=0100 */
  sam_putreg(HX8347_R1CH, 0x04);      /* AP=100 */
  sam_putreg(HX8347_R1BH, 0x10);      /* GASENB=0 PON=1 DK=0 XDK=0 DDVDH_TRI=0 STB=0 */
  up_mdelay(50);
  sam_putreg(HX8347_R43H, 0x80);      /* Set VCOMG=1 */
  up_mdelay(50);

  /* Gamma for CMO 2.8 */

  sam_putreg(HX8347_R46H, 0x95);
  sam_putreg(HX8347_R47H, 0x51);
  sam_putreg(HX8347_R48H, 0x00);
  sam_putreg(HX8347_R49H, 0x36);
  sam_putreg(HX8347_R4AH, 0x11);
  sam_putreg(HX8347_R4BH, 0x66);
  sam_putreg(HX8347_R4CH, 0x14);
  sam_putreg(HX8347_R4DH, 0x77);
  sam_putreg(HX8347_R4EH, 0x13);
  sam_putreg(HX8347_R4FH, 0x4c);
  sam_putreg(HX8347_R50H, 0x46);
  sam_putreg(HX8347_R51H, 0x46);

  /* 240x320 window setting */

  sam_putreg(HX8347_R02H, 0x00);      /* Column address start2 */
  sam_putreg(HX8347_R03H, 0x00);      /* Column address start1 */
  sam_putreg(HX8347_R04H, 0x00);      /* Column address end2 */
  sam_putreg(HX8347_R05H, 0xef);      /* Column address end1 */
  sam_putreg(HX8347_R06H, 0x00);      /* Row address start2 */
  sam_putreg(HX8347_R07H, 0x00);      /* Row address start1 */
  sam_putreg(HX8347_R08H, 0x01);      /* Row address end2 */
  sam_putreg(HX8347_R09H, 0x3f);      /* Row address end1 */

  /* Display Setting */

  sam_putreg(HX8347_R01H, 0x06);      /* IDMON=0 INVON=1 NORON=1 PTLON=0 */
  sam_putreg(HX8347_R16H, 0xc8);      /* MY=1 MX=1 MV=0 BGR=1 */
  sam_putreg(HX8347_R23H, 0x95);      /* N_DC=1001 0101 */
  sam_putreg(HX8347_R24H, 0x95);      /* P_DC=1001 0101 */
  sam_putreg(HX8347_R25H, 0xff);      /* I_DC=1111 1111 */
  sam_putreg(HX8347_R27H, 0x06);      /* N_BP=0000 0110 */
  sam_putreg(HX8347_R28H, 0x06);      /* N_FP=0000 0110 */
  sam_putreg(HX8347_R29H, 0x06);      /* P_BP=0000 0110 */
  sam_putreg(HX8347_R2AH, 0x06);      /* P_FP=0000 0110 */
  sam_putreg(HX8347_R2CH, 0x06);      /* I_BP=0000 0110 */
  sam_putreg(HX8347_R2DH, 0x06);      /* I_FP=0000 0110 */
  sam_putreg(HX8347_R3AH, 0x01);      /* N_RTN=0000 N_NW=001 */
  sam_putreg(HX8347_R3BH, 0x01);      /* P_RTN=0000 P_NW=001 */
  sam_putreg(HX8347_R3CH, 0xf0);      /* I_RTN=1111 I_NW=000 */
  sam_putreg(HX8347_R3DH, 0x00);      /* DIV=00 */
  sam_putreg(HX8347_R3EH, 0x38);      /* SON=38h */
  sam_putreg(HX8347_R40H, 0x0f);      /* GDON=0Fh */
  sam_putreg(HX8347_R41H, 0xf0);      /* GDOF=F0h */

  /* Set LCD backlight to FULL off */

  sam_setpower(&g_lcddev_s.dev, LCD_FULL_OFF);

  /* Fill the display memory with the color BLACK */

  sam_setcursor(0, 0);
  sam_wrsetup();
  for (i = 0; i < (SAM3UEK_XRES * SAM3UEK_YRES); i++)
    {
      sam_wrram(RGB16_BLACK);
    }

  /* Turn the LCD on (but with the backlight off) */

  sam_lcdon();
  return OK;
}

void up_lcduninitialize(void)
{
  /* Turn the LCD off */

  sam_lcdoff();

  /* Set LCD backlight to FULL off */

  sam_setpower(&g_lcddev_s.dev, LCD_FULL_OFF);

  /* Disable SMC peripheral clock */

  putreg32((1 << SAM_PID_SMC), SAM_PMC_PCDR);
}
